# crash-pastebin

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
public/: app.js  index.html  style.css
test/: check.mjs
wasm/: Cargo.toml
wasm/src/: lib.rs  minidump.rs
worker/: index.ts
