[package]
name = "crash-pastebin-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Hand-rolled minimal Windows minidump parser, compiled to WASM."

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
